Tests/DependencyInjection/Fixtures/annotations/inject/valid/FooClassConstructorInjection.php
<?php
/** @Service("constructor.injection") */
class FooClassConstructorInjection
{
    /** @Inject */
    public function __construct($fooService, $barService)
    {

    }
}
