Tests/DependencyInjection/Fixtures/annotations/inject/invalid/invalid3/FooClass.php
<?php
/** @Service */
class FooClassInvalid3
{
    /** @Inject({"foo"}) */
    public function setDependencies($fooService, $barService)
    {
    }
}
